<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="328dp"
            android:scaleType="fitXY"
            android:src="@drawable/bg3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/aplikasi_peramalan_nharga_minyak_mentah_nindonesia_berbasis_nandroid"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.579" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_16"
            android:src="@drawable/lines"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_4"
            android:gravity="center"
            android:text="@string/deskripsi_aplikasi"
            android:fontFamily="@font/medium"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/deskripsi"
            android:layout_width="match_parent"
            android:layout_height="144dp"
            android:layout_marginTop="@dimen/m_16"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:gravity="center"
            android:singleLine="false"
            android:fontFamily="@font/regular"
            android:autoSizeTextType="uniform"
            android:autoSizeMaxTextSize="14sp"
            android:text="@string/deskripsi_content"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_16"
            android:src="@drawable/lines"
            app:layout_constraintTop_toBottomOf="@+id/deskripsi" />
        <TextView
            android:id="@+id/title_fitur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_4"
            android:gravity="center"
            android:fontFamily="@font/medium"
            android:text="@string/fitur_aplikasi"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_fitur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_fitur" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_16"
            android:src="@drawable/lines"
            app:layout_constraintTop_toBottomOf="@+id/rv_fitur" />
        <TextView
            android:id="@+id/unduhapp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_4"
            android:gravity="center"
            android:fontFamily="@font/medium"
            android:text="@string/unduh_aplikasi"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <TextView
            android:id="@+id/des_unduh"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/m_16"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:singleLine="false"
            android:fontFamily="@font/regular"
            android:text="@string/aplikasi_peramalan_harga_minyak_mentah_indonesia_dapat_di_unduh_di_bawah_ini"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unduhapp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_unduh_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="@dimen/m_32"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_marginTop="@dimen/m_8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/des_unduh">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_andro"
                android:fontFamily="@font/medium"
                android:text="Unduh Aplikasi"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="3dp"
                android:paddingTop="@dimen/m_12"
                android:paddingBottom="@dimen/m_12"
                android:paddingRight="@dimen/m_16"
                android:paddingLeft="@dimen/m_16"
                tools:layout_editor_absoluteY="857dp"/>
        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_16"
            android:src="@drawable/lines"
            app:layout_constraintTop_toBottomOf="@+id/btn_unduh_app" />

        <TextView
            android:id="@+id/unduhpetunjuk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_4"
            android:fontFamily="@font/medium"
            android:gravity="center"
            android:text="@string/buku_petunjuk_penggunaan"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/des_unduh_petunjuk"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="@dimen/m_16"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:singleLine="false"
            android:fontFamily="@font/regular"
            android:text="@string/des_petunjuk"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/unduhpetunjuk" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_unduh_petunjuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/m_8"
            android:paddingBottom="@dimen/m_16"
            app:cardBackgroundColor="@color/blue"
            app:cardCornerRadius="@dimen/m_32"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/des_unduh_petunjuk">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/google_drive"
                android:fontFamily="@font/medium"
                android:paddingLeft="@dimen/m_16"
                android:paddingTop="@dimen/m_12"
                android:paddingRight="@dimen/m_16"
                android:paddingBottom="@dimen/m_12"
                android:text="@string/buku_petunjuk_penggunaan"
                android:textColor="@color/white"
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="857dp" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="@dimen/m_8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_unduh_petunjuk"
            tools:layout_editor_absoluteX="-16dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>